@@ -8,6 +8,9 @@ Lib/
 * Quick fix to ldif.is_dn() to let multi-valued RDNs pass as valid.
   Is too liberal in some corner-cases though...
 * ldap.open() now outputs a deprecation warning
+* module-wide locking is now limited to calling _ldap.initialize().
+  Still ldap.functions._ldap_function_call() is used to wrap all
+  calls for writing debug log.
 
 Modules/
 * New LDAP options available in OpenLDAP 2.4.18+ supported in
